| Bug #3307 | FLUSH TABLES sometimes breaks prepared statement table resolution | ||
|---|---|---|---|
| Submitted: | 26 Mar 2004 13:54 | Modified: | 31 Mar 2004 10:31 |
| Reporter: | Dean Ellis | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1.2 | OS: | Linux (Linux) |
| Assigned to: | Dmitry Lenev | Target Version: | |
[26 Mar 2004 13:54]
Dean Ellis
[31 Mar 2004 10:31]
Dmitry Lenev
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
ChangeSet 1.1755 2004/03/31 22:17:10 dlenev@brandersnatch.localdomain
Merge of fix for bug #2050 and bug #3307
