sql/sql_acl.cc
@@ -2194,7 +2194,7 @@ int mysql_table_grant(THD *thd, TABLE_LIST *table_list,
       DBUG_RETURN(-1);
     while ((column = column_iter++))
     {
-      int unused_field_idx= -1;
+      uint unused_field_idx= NO_CACHED_FIELD_INDEX;
       if (!find_field_in_table(thd,table,column->column.ptr(),
                                column->column.length(),0,0,
                                &unused_field_idx))
